Bug 866050 - Fix UsesBeforeIonRecompile. r=bhackett